--- a/MasterPage.master
+++ b/MasterPage.master
@@ -112,7 +112,7 @@
             <tr>
               <td>
                 <span style="color: #99ccff">Version : </span> <span style="color: #99ffcc"> DB 1.0.1</span>
-                <a href="#demo1" class="btn btn-light btn-outline-primary" style="width: 28px;height: 28px; text-align: center; text-justify:auto; cursor: pointer" data-toggle="collapse"><b>i</b></a>
+                <a href="#demo1" class="btn btn-light btn-outline-light" style="width: 28px;height: 28px; text-align: center; text-justify:auto; cursor: pointer" data-toggle="collapse"><b>i</b></a>
   
                 <a href="#demo" class="btn btn-light btn-outline-primary" style="width: 280px;height: 28px; text-align: center; text-justify:auto; cursor: pointer" data-toggle="collapse"><b>User Manual</b></a>
   <div id="demo" class="collapse">
