--- a/MasterPage.master
+++ b/MasterPage.master
@@ -125,12 +125,18 @@
   <div class ="row"> 
     <div class="col-3">
       <hr/>
-  <span style="color: #99ccff">First Release : </span><span style="color: #99ffcc">06/04/2019 </span>
+  <span style="color: #99ccff">DB1.0 First Release : </span><span style="color: #99ffcc">06/04/2019 </span>
  <hr/>
-   <p><span style="color: #99ccff">DB1.0 Update 2 : </span><span style="color: #99ffcc">11/06/2019 </span></p>
+   <p><span style="color: #99ccff">DB1.1 Update 2 : </span><span style="color: #99ffcc">11/06/2019 </span></p>
   <p> <span style="color: #99ffcc">1. User DashBoard - Pre/Post Order receipt information updated  </span> </p>
    <p> <span style="color: #99ffcc">2. Project DashBoard - Pre/Post Order receipt information updated  </span> </p>
    <p> <span style="color: #99ffcc">3. Project DashBoard - HOLD Chart/Report Added  </span> </p>
+
+   <hr/>
+
+   <p><span style="color: #99ccff">DB1.2 Update 3 : </span><span style="color: #99ffcc">15/02/2020 </span></p>
+  <p> <span style="color: #99ffcc">1. Discipline DashBoard Added  </span> </p>
+  
 
    <hr/>
   </div> </div>
